@@ -1,5 +1,11 @@
 dpkg (1.15.8.13) UNRELEASED; urgency=low
 
+  [ Guillem Jover ]
+  * Do not translate SE Linux context to human readable form while unpacking,
+    as that might cause the operation to fail if the mcstransd daemon
+    stopped running during the transaction. Closes: #679641
+    Thanks to Russell Coker <russell@coker.com.au>.
+
   [ Updated man page translations ]
   * German (Helge Kreutzmann). Fix sub optimal translation of package states
     LP: #368783, a fix by Chris Leick and other fixes.
